tests/invalid/Parsing_Invalid_6.whiley
function f(int y) -> (int r):
    int x = y
    int x = x
    return x
